--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -25,9 +25,11 @@
     {
         <div class="userId" style="color:white; width:350px; background:#42AAFF">
             <span> Вы вошли под пользователем - "@_nameUser"</span>
-            <br />
+            
             <span> userId - "@_userId" </span>
         </div>
+        <button style="background:black; float:inline-end;" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
+        <br />
         <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей</h1>
         <br />
         <div>
@@ -120,7 +122,6 @@
         <div>
             <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
         </div>
-        <button style="background:black; float:inline-end" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
     }
     <Modal @ref="modalWindowDeleteAccount" Title="Подтверждения удаления аккаунта!">
         <BodyTemplate>
@@ -259,7 +260,7 @@ else
         await modalWindowDeleteAccount.HideAsync();
     }
     #region метод поиска аккаунта
-    private async Task Search(string? searchName)
+    private void Search(string? searchName)
     {
         if (searchName == null || searchName == "")
         {
