--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -30,7 +30,7 @@
         </div>
         <button style="background:black; float:inline-end;" class="glow-on-hover" id="exit" @onclick="Exit">Выйти</button>
         <br />
-        <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей</h1>
+        <h1 style="color:blueviolet; font-style:oblique" align="center">Менеджер паролей аккаунтов</h1>
         <br />
         <div>
             <InputText style="background:#A5A5A5; height:35px; width:300px;" class="glow-on-hover" @bind-Value=@searchName placeholder="поиск по наименованию" />
