--- a/CourceProject/Components/Pages/Authorization.razor
+++ b/CourceProject/Components/Pages/Authorization.razor
@@ -46,7 +46,7 @@
 else
 {
     navigationManager.NavigateTo("/PasswordManager");
-    toastService.ShowError("Вы уже авторизованы!");
+    toastService.ShowInfo("Вы уже авторизованы!");
 }
 
 @code {
