--- a/CourceProject/Components/Pages/Home.razor
+++ b/CourceProject/Components/Pages/Home.razor
@@ -5,7 +5,7 @@
 
 @inject IUserRepository _listUsers
 @inject IConfidantRepository _listConfidants
-@inject IEncryptor passwordEncryptor;
+@inject IEncryptor passwordEncryptor
 @inject ILogger<Authorization> logger
 @inject IEmailSender sendMessage
 @page "/"
@@ -15,7 +15,7 @@
     <h1> Добро пожаловать в приложение "Менеджер паролей"! </h1>
 
     <br />
-    <h5>Данное серверное приложение служит для хранения паролей от разных сервисов, аккаунтов.</h5>
+    <h5>Данное веб-приложение служит для хранения паролей от разных сервисов, аккаунтов.</h5>
     <img src="Менеджер паролей.jpg" style="width:100%">
 </div>
 <br /> <br /> <br /> <br /> <br /> <br /> <br />
