--- a/CourceProject/Components/Pages/Registration.razor
+++ b/CourceProject/Components/Pages/Registration.razor
@@ -56,7 +56,7 @@
 else
 {
     navigationManager.NavigateTo("/PasswordManager");
-    toastService.ShowError("Вы уже зарегистрированы, для добавления нового пользователя требуется выход существующего!");
+    toastService.ShowInfo("Вы уже зарегистрированы, для добавления нового пользователя требуется выход существующего!");
 }
 
 
