--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -69,11 +69,17 @@
                         }
                         else
                         {
-                            <td>@xxx</td>
                             <td>
-                                <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
+                                <div style="display:flex; justify-content:space-between">
+                                    @xxx
+                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>Copy(account))">Копировать пароль</button>
+                                </div>
+                                
                             </td>
-                        }
+                            <td>
+                                    <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
+                            </td>                            
+                        }                        
                         <td>
                             <button style="background:#1b6ec2; height:60px" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
                         </td>
@@ -271,5 +277,11 @@ else
             accounts = accounts.Where(r => r.Source!.Contains(searchName));
         }
     }
-   #endregion
+    #endregion
+
+    private void Copy(Account account)
+    {
+        TextCopy.ClipboardService.SetText(passwordEncryptor.Decrypt(account.Password));
+    }
+    
 }
