Доработаны кнопка сохранения пароля

--- a/CourceProject/Components/Pages/ChangePassword.razor
+++ b/CourceProject/Components/Pages/ChangePassword.razor
@@ -12,26 +12,37 @@
 @page "/ChangePassword"
 @rendermode InteractiveServer
 
-<h3>Изменение пароля</h3>
-
 @if (isConnected)
 {
-    <EditForm Model="@changeUserPassword" OnValidSubmit="Change" FormName="user_changePassword">
-    <DataAnnotationsValidator />
-    <br />
-        Введите текущий пароль: <InputText type="password" @bind-Value="changeUserPassword!.CurrentPassword" />
-    <br />
-    <br />
-        Введите новый пароль: <InputText type="password" @bind-Value="changeUserPassword.NewPassword" />
-    <br />
-    <br />
-        Повторите новый пароль: <InputText type="password" @bind-Value="changeUserPassword.NewPasswordRepeat" />
-    <br />
-    <ValidationSummary />
-    <br />
-    <br /> <input type="submit" value="Изменить пароль" />
-    </EditForm>
-
+    <div class="container-fluid">
+        <div class="col-md-4 offset-md-4" text-align="left">
+            <div class="form-container">
+                <div class="form-icon"><i class="fa fa-user"></i></div>
+                <h3 class="title">Изменение пароля пользователя</h3>
+                <EditForm Model="@changeUserPassword" OnValidSubmit="Change" FormName="user_changePassword" class="form-horizontal">
+                    <DataAnnotationsValidator />
+                    <div class="form-group">
+                        <label>Введите текущий пароль:</label>
+                        <InputText type="password" @bind-Value="changeUserPassword!.CurrentPassword" class="form-control" placeholder="Текущий пароль" />
+                        <br />
+                    </div>
+                    <div class="form-group">
+                        <label>Введите новый пароль:</label>
+                        <InputText type="password" @bind-Value="changeUserPassword.NewPassword" class="form-control" placeholder="Новый пароль" />
+                        <br />
+                    </div>
+                    <div class="form-group">
+                        <label> Повторите новый пароль:</label>
+                        <InputText type="password" @bind-Value="changeUserPassword.NewPasswordRepeat" class="form-control" placeholder="Повторите новый пароль" />
+                        <br />
+                    </div>
+                    <ValidationSummary />
+                    <input type="submit" value="Изменить пароль" class="btn btn-default" />
+                    <br />
+                </EditForm>
+            </div>
+        </div>
+    </div>
 }
 else
 {
