--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -63,25 +63,27 @@
                         @if (flag && accountId == account.Id)
                         {
                             <td>@passwordEncryptor.Decrypt(account.Password)</td>
-                            <td>
-                                <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
+                            <td>                                
+                                 <div style="display:flex; justify-content:space-between">
+                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Скрыть пароль</button>
+                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>Copy(account))">Копировать пароль</button>
+                                 </div>
                             </td>
                         }
                         else
                         {
                             <td>
-                                <div style="display:flex; justify-content:space-between">
-                                    @xxx
-                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>Copy(account))">Копировать пароль</button>
-                                </div>
-                                
+                                 @xxx
                             </td>
                             <td>
-                                    <button style="background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
+                                <div style="display:flex; justify-content:space-between">
+                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>ShowPassword(account))">Показать пароль</button>
+                                    <button style="width:100px; font-size:15px; background:#1b6ec2" class="glow-on-hover" id="show" @onclick="(()=>Copy(account))">Копировать пароль</button>
+                                </div>
                             </td>                            
                         }                        
-                        <td>
-                            <button style="background:#1b6ec2; height:60px" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
+                        <td>                           
+                            <button style="background:#1b6ec2; font-size:15px; height:60px" class="glow-on-hover" id="change" @onclick="(()=>Change(account,selectedNumber))">Генерация нового пароля</button>
                         </td>
                         <td>
                             <select @bind="selectedNumber" placeholder="6">
@@ -120,14 +122,17 @@
                             }
                         </select>
                     </td>
+                    <td>
+                        <div>
+                            <button style=" font-size:15px; background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
         <br />
         <br />
-        <div>
-            <button style="background:blue" class="glow-on-hover" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
-        </div>
+       
     }
     <Modal @ref="modalWindowDeleteAccount" Title="Подтверждения удаления аккаунта!">
         <BodyTemplate>
@@ -282,6 +287,7 @@ else
     private void Copy(Account account)
     {
         TextCopy.ClipboardService.SetText(passwordEncryptor.Decrypt(account.Password));
+        toastService.ShowInfo("Пароль от аккаунта {" + account.Source + "} скопирован в буфер обмена");
     }
     
 }
